Fix whitespace

--- a/assets/index.css
+++ b/assets/index.css
@@ -31,7 +31,7 @@
     z-index: 2;
     width: 100%;
     height: 50%;
-    top: 0;
+    top: -2px;
     position: absolute;
     background-image: rgb(22,22,22,0);
     background: linear-gradient(0deg, rgb(22,22,22,0) 0%, rgba(22,22,22,76%) 100%);
@@ -86,6 +86,7 @@
     content: "";
     display: block;
     pointer-events: none;
+    right: -2px;
     width: 100%;
     height: 100%;
     background: rgb(22,22,22,0);
